--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
       tabindex="0"
     >
 
+    <div class="feedback" id="feedback">Klick op de Lautsprecher</div>
+    <div class="grid" id="grid"></div>
+  </div>
 
   <audio id="audio" preload="auto" playsinline></audio>
 
